# django-multihost

./: .dockerignore  .env  .gitignore  Makefile  README.md  actions.py  actions.py.no  cmd.sh  create-group.sh  deploy.py  docker-compose.site.yml  docker-compose.traefik.yml  gunicorn.Dockerfile  instructions.md  manage.py  package-lock.json  pyproject.toml  system-requirements.toml  test-start.sh  testing.Dockerfile
.github/: FUNDING.yml
.github/workflows/: docker_build.yml
account/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_customuser_associated_site_and_more.py  0003_alter_customuser_associated_site.py  0004_alter_customuser_associated_site.py
actions/: __init__.py  actions.py  git.py  helpers.py
deploy/: __init__.py  admin.py  django_multihost.schema.json  doma.py  exceptions.py  helpers.py  models.py  serializers.py  settings.py  test.py  urls.py
deploy/compose/: site.yml
deploy/conf/: __init__.py  base.py  core.py  parts.py
deploy/control/: actions.py  convert.py  core.py
deploy/dj/: settings.py
deploy/dockerfiles/: gunicorn.Dockerfile
deploy/forms/: __init__.py  compose.py  parts.py  quickcreate.py  services.py
deploy/migrations/: 0001_initial.py  0002_alter_gunicorn_options_alter_postgres_options.py  0003_deployment_modified_deployment_online.py  0004_alter_volume_host_path.py  0005_allow_blank_and_null_gunicorn_postgres.py  0006_remove_postgres_name_remove_postgres_password_and_more.py  0007_deployment_set_on_delete_to_null.py  0008_remove_deployment_online.py  0009_alter_volume_mode.py
deploy_raw/: exceptions.py  instructions.md  test.py
django_multihost/: asgi.py  settings.py  urls.py  views.py  wsgi.py
sites/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
templates/: 403.html  base.html  home.html
tests/: docker-compose.yml
(+78 files in other folders)
